--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: c
 compiler: gcc
+before_install: sudo apt-get install nasm genisoimage
 script: make deps && make mkrd && make
 notifications:
   email: false
