--- a/src/arch/x86/Makefile
+++ b/src/arch/x86/Makefile
@@ -1,2 +1,2 @@
-ARCH_OBJECT_NAMES += boot init idt/idt_asm util/util gdt/gdt idt/idt mem/paging idt/exceptions idt/syscalls multitasking/multitasking
+ARCH_OBJECT_NAMES += boot init idt/idt_asm util/util gdt/gdt idt/idt mem/paging idt/exceptions idt/syscalls multitasking/multitasking multitasking/process
 CC_FLAGS += -Isrc/arch/x86/inc
