--- a/grub-files/grub.cfg
+++ b/grub-files/grub.cfg
@@ -4,5 +4,6 @@ set default=0
 menuentry "Jaq" {
     multiboot /boot/kernel.elf
     module /modules/initrd.rd
+    module /modules/user_test.bin
     boot
 }
